공통 모듈 분리

--- a/html 연습용 예제/camfast/starbux.html
+++ b/html 연습용 예제/camfast/starbux.html
@@ -35,8 +35,9 @@
     <!-- ScrollMagic -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js" integrity="sha512-8E3KZoPoZCD+1dgfqhPbejQBnQfBXe8FuwL4z/c8sTrgeDMFEnoyTlH3obB4/fV+6Sg0a0XF+L/6xS4Xx1fUEg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- <script defer src="./javascript/youtube.js"></script> -->
+    <script defer src="./javascript/youtube.js"></script>
+    <script defer src="./javascript/common.js"></script>
     <script defer src="./javascript/main.js"></script>
-
 </head>
 <body>
 <!-- header -->
@@ -49,7 +50,7 @@
         <div class="sub-menu">
             <ul class="menu">
                 <li>
-                    <a href="/signin">Sign In</a>
+                    <a href="../camfast/signin/">Sign In</a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">My Starbucks</a>
