--- a/html 연습용 예제/camfast/signin/index.html
+++ b/html 연습용 예제/camfast/signin/index.html
@@ -41,7 +41,7 @@
         <div class="sub-menu">
             <ul class="menu">
                 <li>
-                    <a href="../camfast/signin/">Sign In</a>
+                    <a href="../camfast/signin/index.html">Sign In</a>
                 </li>
                 <li>
                     <a href="javascript:void(0)">My Starbucks</a>
